--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="col-md-4">
                         <div class="feature-box">
                             <div class="feature-img">
-                                <img src="bali.jpg">
+                                <img src="images/bali.jpg">
                                 <div class="price">
                                     <p>10,000</p>
                                 </div>
@@ -52,7 +52,7 @@
                     <div class="col-md-4">
                         <div class="feature-box">
                             <div class="feature-img">
-                                <img src="Bali.jpg">
+                                <img src="images/Bali.jpg">
                                 <div class="price">
                                     <p>10,000</p>
                                 </div>
@@ -76,7 +76,7 @@
                     <div class="col-md-4">
                         <div class="feature-box">
                             <div class="feature-img">
-                                <img src="Bali.jpg">
+                                <img src="images/Bali.jpg">
                                 <div class="price">
                                     <p>10,000</p>
                                 </div>
